--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -24,10 +24,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Lint with flake8
-        run: |
-          pip install flake8
-          flake8 .
+      #- name: Lint with flake8
+      #  run: |
+      #    pip install flake8
+      #    flake8 .
 
       - name: Run app (optional dev test)
         run: |
