--- a/examples/semantic_intent_matching/requirements.txt
+++ b/examples/semantic_intent_matching/requirements.txt
@@ -81,3 +81,25 @@ mkdocs-material>=9.0.0,<10.0.0           # Material theme for docs
 #   - Cache embeddings in production
 #   - Consider Redis for distributed caching
 # ================================================
+
+# PACT Semantic Intent Matching Dependencies
+sentence-transformers>=2.2.0,<3.0.0
+numpy>=1.21.0,<2.0.0
+scipy>=1.7.0,<2.0.0
+pandas>=1.3.0,<3.0.0
+scikit-learn>=1.0.0,<2.0.0
+fastapi>=0.100.0,<1.0.0
+uvicorn>=0.23.0,<1.0.0
+pydantic>=2.0.0,<3.0.0
+python-dotenv>=1.0.0,<2.0.0
+structlog>=23.0.0,<24.0.0
+
+# Optional high-performance search
+faiss-cpu>=1.7.0,<2.0.0
+
+# Optional OpenAI embeddings
+openai>=1.0.0,<2.0.0
+
+# Testing
+pytest>=7.0.0,<8.0.0
+pytest-asyncio>=0.21.0,<1.0.0
